--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: dodgerblue;
+  --primary-color: #dc3545;
   --font-color: white;
 }
 
@@ -33,11 +33,31 @@ body {
   cursor: pointer;
 }
 
+.overlay{
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  
+
+}
+
+.overlay .play-button{
+  position: relative;
+  font-size: 64px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
 video {
   border-radius: 5px;
   width: 100%;
   height: auto
 }
+
+
 
 /* Containers */
 .show-controls {
@@ -94,9 +114,10 @@ video {
 
 /* Progress Bar */
 .progress-range {
-  height: 8px;
+  height: 6px;
   width: calc(100% - 30px);
-  background: rgba(202, 202, 202, 0.5);
+  background: rgba(71, 71, 71, 0.5);
+  
   margin: auto;
   border-radius: 10px;
   position: absolute;
@@ -108,7 +129,7 @@ video {
 }
 
 .progress-range:hover{
-  height:10px;
+  height:8px;
 }
 
 
@@ -119,6 +140,17 @@ video {
   height: 100%;
   border-radius: 10px;
   transition: all 0.2s ease;
+}
+
+.progress-circle {
+  width: 14px;
+  height: 14px;
+  background-color: #f8f8f8;
+  z-index: 1000;
+  position: absolute;
+  top: -3px;
+  margin-left: -7px;
+  border-radius: 100px;
 }
 
 /* Left Controls -------------------------- */
@@ -165,6 +197,11 @@ video {
 
 .volume-bar:hover {
   background: var(--primary-color);
+}
+
+.rewind{
+  position: relative;
+  left: 65px
 }
 
 /* Right Controls ---------------------------- */
@@ -286,7 +323,7 @@ select > option {
 /* Media Query: Large Smartphone (Horizontal) */
 @media screen and (max-width: 900px) and (max-height: 500px) {
   
-  .player {
+  .player{
     max-height: 95vh;
     max-width: auto;
   }
